--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "py-cord>=2.6.1",
     "pydantic-settings>=2.12.0",
     "python-dotenv>=1.2.1",
+    "rich>=14.0.0",
     "structlog>=25.5.0",
 ]
 
