--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic-settings>=2.12.0",
     "python-dotenv>=1.2.1",
     "rich>=14.0.0",
+    "sqlmodel>=0.0.27",
     "structlog>=25.5.0",
 ]
 
